rust-debuginfo/src/dwarf/resolution/snapshots/std_type_detection-2.snap
---
source: rust-debuginfo/src/dwarf/resolution/types.rs
expression: ty
snapshot_kind: text
---
Std(
    Vec(
        VecDef {
            length_offset: 16,
            data_ptr_offset: 8,
            inner_type: Primitive(
                Int(
                    IntDef {
                        size: 4,
                    },
                ),
            ),
        },
    ),
)
