rust-debuginfo/src/dwarf/resolution/snapshots/std_type_detection.snap
---
source: rust-debuginfo/src/dwarf/resolution/types.rs
expression: ty
snapshot_kind: text
---
Std(
    String(
        StringDef,
    ),
)
